--- a/views/student/course/1_Introduction-course.ejs
+++ b/views/student/course/1_Introduction-course.ejs
@@ -34,7 +34,6 @@
     <%- include('../layouts/navbar') %>
     <!-- end of Narbar-->
     <!-- LEFT -->
-    <%- include('../layouts/course-list') %>
     <!-- END OF LEFT-->
 
     <!-- MIDDLE 1 -->
@@ -53,142 +52,10 @@
     <!-- MIDDLE 1 -->
     <div class="content">
         <div id = "content" class="container">
-            <h1> Introduction  </h1>
-    <!--   C Language -->
-            <div class="accordion" id="accordionParentSyntax">
-                <!--   Token -->
-                <div id="collapseIntroduce" class="accordion-collapse collapse show" data-bs-parent="#accordionParentSyntax">
-                    <h2 >Token</h2>
-                    <!--   ## -->
-                    <div class="box bg-light  mb-5 shadow" >
-                        <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0">
-                            <h2 id = ''>Token in C</h2>
-                            <br>โปรแกรม C ประกอบด้วย Token ต่างๆ และ Token เป็นได้ทั้งคีย์เวิร์ด ตัวระบุ ค่าคงที่ สตริง ตัวอักษร หรือสัญลักษณ์<br>
-                            <br>ตัวอย่างเช่น คำสั่ง C ต่อไปนี้ประกอบด้วยToken 5 ตัว<br>
-                            <img src="https://drive.google.com/uc?id=1f21DU_vdEUTtR0KU9qsTNjke4E4uqSL9">
-                            <br>ทำการแยก Token แยกออกในแต่ละบรรทัดจากรูปด้านบน<br>
-                            <img src="https://drive.google.com/uc?id=1nB4RPna9Qx-9zv7ylWcR9c1xCGHEFvDw">
-                            <br><br>
-                            <iframe width="480" height="320" src="https://www.youtube.com/embed/aIY5P80IoRg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
-                            <BR id="Semicolons">
-                        </div>
-                    </div>
-            <br ></div>
-            <!--   Semicolons -->
-            <div id="collapseIntroduce" class="accordion-collapse collapse show" data-bs-parent="#accordionParentSyntax">
-                <h2 >Semicolons</h2>
-                <!--   ## -->
-                <div class="box bg-light  mb-5 shadow" >
-                    <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0">
-                        <h2 id = 'Introduce'> Semicolons ; </h2>
-                        <br>ในโปรแกรม C เครื่องหมาย ; (Semicolon) เป็นตัวสิ้นสุดคำสั่ง กล่าวคือ แต่ละประโยคต้องลงท้ายด้วยเซมิโคลอน เพื่อบอกการจบของแต่ละคำสั่ง<br>
-                        <br>เซมิโคลอน (Semicolon) (;) เป็นสัญลักษณ์ที่ใช้เพื่อแบ่งแยกคำสั่งภายในโปรแกรม ซึ่งมันหมายถึงการจบคำสั่งนั้นๆ เซมิโคลอนใช้ในภาษาต่างๆ และมันเป็นสิ่งที่บังคับ เพื่อให้ตัวคอมไพเลอร์ของภาษาสามารถแยกแยะคำสั่งในการทำงานได้ด้านล่างเป็น 2 ชุดคำสั่ง (Statements) ที่แตกต่างกัน
-                        <br>
-                        <br><br>
-                        <img src="https://drive.google.com/uc?id=19Byi-N3fRfHahipGTtGlj1UiPNGDIgfG">
-                        <br><br>
-                        <iframe width="480" height="320" src="https://www.youtube.com/embed/ctZJ_7YxD_g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        <BR id="Comments">
-                    </div>
-                </div>
-        <br></div>
-            <!--   Comments -->
-            <div id="collapseIntroduce" class="accordion-collapse collapse show" data-bs-parent="#accordionParentSyntax">
-                <h2>Comments</h2>
-                <!--   ## -->
-                <div class="box bg-light  mb-5 shadow" >
-                    <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0">
-                        <h2 id = 'Introduce'>Comments /* */</h2>
-                        <br>Comments เป็นส่วนของโค้ดที่ไม่มีผลต่อการทำงานของโปรแกรม มันถูกใช้เพื่ออธิบายโปรแกรมให้เราเข้าใจ คำอธิบายโปรแกรม เป็นเหมือนข้อความช่วยเหลือในโปรแกรม C และคอมไพเลอร์จะละเว้น โดยขึ้นต้นด้วย /* และลงท้ายด้วยอักขระ */ ดังที่แสดงด้านล่าง<br>
-                        <br><br>
-                        <img src="https://drive.google.com/uc?id=1QM8BJItULvpw6QRJjVjBV0sLrS49TiDO">
-                        <BR id="Identifier">
-                    </div>
-                </div>
-        <br></div>
-        <!--   Identifier -->
-            <div id="collapseIntroduce" class="accordion-collapse collapse show" data-bs-parent="#accordionParentSyntax">
-                <h2>Identifier</h2>
-                <!--   ## -->
-                <div class="box bg-light  mb-5 shadow" >
-                    <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0">
-                        <h2 id = 'Introduce'>Identifier/Keyword</h2>
-                        <br>Identifier คือชื่อที่ใช้ระบุตัวแปร ฟังก์ชัน หรือรายการอื่นๆ ที่ผู้ใช้กำหนด ชื่อเริ่มต้นด้วยตัวอักษร A ถึง Z, a ถึง z หรือขีดล่าง ‘_’ ตามด้วยตัวอักษร และตัวเลขตั้งแต่ 0 ถึง 9)<br>
-                        <br>C ไม่อนุญาตให้ใช้เครื่องหมายวรรคตอน เช่น @, $ และ % ภายในชื่อ ดังนั้น Manpower และ manpower จึงเป็นชื่อที่แตกต่างกันใน C ต่อไปนี้คือตัวอย่างบางส่วนของชื่อที่สามารถใช้ได้<br>
-                        <br><br>
-                        <img src="https://drive.google.com/uc?id=1XlZoDVM0ZRZjrHXRLuR-8ebJaQ04fm_3">
-                        <br><br>
-                        <br>Keyword คำหลักเป็นคำที่กำหนดไว้ล่วงหน้าหรือสงวนไว้ในไลบรารี C ที่มีความหมายคงที่และใช้ในการดำเนินการภายใน ภาษา C รองรับ 32 คำสำคัญคำหลักทุกคำมีอยู่ในตัวพิมพ์เล็กเช่น auto, break, case, const, ดำเนินการต่อ int เป็นต้น<br>
-                        <br><br>
-                        <img src="https://drive.google.com/uc?id=1JRS5u_2N3OrfMyojwlsgt3rmPWIS3Mt-" width="500" height="250">
-                        <br><br>
-                        <br>การตั้งชื่อฟังก์ชัน การตั้งชื่อตัวแปร หรือชื่ออื่นๆ ซึ่งถือว่าเป็นชื่อเฉพาะที่กําหนดขึ้นโดยผู้เขียนโปรแกรมเป็นผู้กําหนด (identifiers) การกําหนดชื่อต่าง ๆ เหล่านี้ สําหรับภาษา C มีกฎเกณฑ์ดังต่อไปนี้<br>
-                        <br>1. ชื่อต้องขึ้นต้นด้วยตัวอักษรหรือเครื่องหมาย _ (เส้นใต้) เครื่องหมายอื่นใช้ไม่ได้<br>
-                        <br>2. ภายในชื่อไม่มีการเว้นวรรค อาจใช้เครื่องหมาย _ ขั้นระหว่างตัวอักษรให้ดูเหมือนเว้นวรรคได้<br>
-                        <br>3. ถัดจากตัวแรกอาจเป็นตัวอักษร ตัวเลข หรือเครื่องหมาย _ก็ได้<br>
-                        <br>4. ความยาวของชื่อไม่จํากัด แต่จะนําตัวอักษรไปเปรียบเทียบความแตกต่าง เพียง 32 ตัวแรกเท่านั้น<br>
-                        <br>5. ตัวอักษรตัวเล็กและตัวอักษรตัวใหญ่ภาษา C จะถือว่าต่างกัน หรือจะพูดว่า “ชื่อจะเป็น Case-Sensitive”<br>
-                        <br>6. การตั้งชื่อควรหลีกเลี่ยงชื่อที่มีตัวแรกเป็นเครื่องหมาย _เพราะชื่อชนิดนี้มีใช้อยู่มากในการตั้งชื่อตัวแปรของโปรแกรมระบบ<br> (System Variables) อาจจะตรงกันได้โดยไม่ได้ตั้งใจ จะทําให้โปรแกรมทํางานผิดพลาดได้<br>
-                        <br>ชื่อที่ตั้งขึ้นจะต้องไม่ตรงกับคําสงวน (Reserved Words) หรือบางทีเรียกว่า Keywords เพราะคําสงวนเหล่านี้ได้ถูกใช้เป็นชื่อคําสั่งหรือชื่อของฟังก์ชันในตัวภาษาอยู่แล้ว จะได้ชื่อที่ซํ้ากันอีกไม่ได้<br>
-                        <br>โครงสร้างโปรแกรม C  ของ main()ความคิดเห็น /* หลายบรรทัด */ และ // บรรทัดเดียว<br>#รวม​คำสั่ง<br>#include< stdio.h >​ ​=>​ ​# = ตัวประมวลผลล่วงหน้า, 
-                        < stdio.h > = ไฟล์ส่วนหัวของอินพุต-เอาต์พุตมาตรฐาน ฟังก์ชัน main()​->​main()<br>
-                        <br><br>
-                        <img src="https://drive.google.com/uc?id=1CymcnUgOBSObaQI1Tl9apWZnRR-r5D5V" width="400" height="200">
-                        <br><br>
-                        <img src="https://drive.google.com/uc?id=1ivZZoP5gOjnWP1N-hmuiFhu9jw7Advi-" width="500" height="400">
-                        <br id="Escape​">
-                    </div>
-                </div>
-        <br></div>
-        <!--   Name Rule -->
-            <div id="collapseIntroduce" class="accordion-collapse collapse show" data-bs-parent="#accordionParentSyntax">
-                <h2>Escape​ ​sequences​ ​in​ ​C</h2>
-                <!--   ## -->
-                <div class="box bg-light  mb-5 shadow" >
-                    <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0">
-                        <h2 id = 'Introduce'>Escape​ ​sequences​ ​in​ ​C</h2>
-                        <img src="https://drive.google.com/uc?id=1Bl2mZjfd1MCGwPnOOr8HqoczEIfuBcqt" width="500" height="250">
-                        <br><br>
-                        <br>เป็นตัวระบุที่มีค่าไม่สามารถเปลี่ยนแปลงได้ในเวลาดำเนินการของโปรแกรม. โดยทั่วไปค่าคงที่สามารถใช้เพื่อแสดงเป็นค่าคงที่ใน C โปรแกรม. ค่าคงที่แบ่งออกเป็นประเภทต่อไปนี้<br>
-                        <img src="https://drive.google.com/uc?id=1lspHaz-0Juc-Dvaph30DGq2AQ3Q4v5l8">
-                        <br>single​ ​quotes ' ' เรียกว่าค่าคงที่อักขระตัวเดียว<br>
-                        <br>double ​quotes​ ​"​" ​เรียกว่าค่าคงที่อักขระสตริง<br>
-                        <img src="https://drive.google.com/uc?id=1sOv3xRHrSWQwljpRBngKrCctrqfZCn6p" width="700" height="250">
-                        <br>#include < conio.h >​ //เป็นการเรียกใช้ส่วนของเฮดเดอร์ไฟล์เกี่ยวกับการจัดการเกี่ยวกับหน้าจอทั้งหมด getch();​ ​//เป็นคำสั่งรับอักขระจากแป้นพิมพ์เพื่อกำหนดไม่ให้โปรแกรมปิดหน้าต่างผลลัพธ์เมื่อโปรแกรมจบการทำงาน<br>
-                        <img src="https://drive.google.com/uc?id=1KJUj-hpQRELe288QkXvGW5nZMQ1ow5As" width="600" height="150">
-                        <br>Output​ ​->​ ​Value​ ​from​ ​constant​ ​variable:​ ​10​ ​นิยมตั้งชื่อตัวแปรด้วยตัวพิมพ์ใหญ่ทั้งหมด<br>
-                        <br>++++++++++++++<br>
-                        <br>++++++++++++++<br>
-                        <br id="Variable">
-                    </div>
-                </div>
-        </div>
-        <!--   Variable -->
-        <div id="collapseIntroduce" class="accordion-collapse collapse show" data-bs-parent="#accordionParentSyntax">
-            <h2>Variable</h2>
-            <!--   ## -->
-            <div class="box bg-light  mb-5 shadow" >
-                <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0">
-                    <h2 id = 'Introduce'>Variable</h2>
-                    <br>ตัวแปรเป็นตัวระบุที่เก็บข้อมูลหรือตัวแปรอื่น มันเป็นตัวระบุที่มีค่าสามารถเปลี่ยนแปลงได้ในเวลาดำเนินการของโปรแกรม มันถูกใช้เพื่อระบุข้อมูลเข้าในโปรแกรม<br>
-                    <br>Syntax :<br>
-                    <img src="https://drive.google.com/uc?id=19rBDVxi4W7wpPywpe45n2vbc2pIljivF">
-                    <br> การประกาศตัวแปร เป็นกระบวนการจัดสรรพื้นที่หน่วยความจำให้เพียงพอสำหรับข้อมูลในเงื่อนไขของตัวแปร<br>
-                    <br>Syntax : ประเภทข้อมูล Variable_name; -> int​ a;<br>
-                    <img src="https://drive.google.com/uc?id=14KOrX6YVGLeD3OiA47b7tL3DZsYSWmXI">
-                    <br>การเริ่มต้นตัวแปร เป็นกระบวนการจัดสรรพื้นที่หน่วยความจำให้เพียงพอกับค่าที่ผู้ใช้กำหนด<br>
-                    <br>Syntax : ประเภทข้อมูล Variable_name = ค่า; -> int​ ​b = 20;<br>
-                    <img src="https://drive.google.com/uc?id=1XaG0BnSw2nlXbPjHczNLG1_KvJEmFbLL">
-                    <br>char a = 'X';<br>
-                    <br>int marks =89;<br>
-                    <br>float amount = 49.23;<br>
-                    <br>เขียนตัวแปรเริ่มต้นในบรรทัดแยกและความคิดเห็นข้างชื่อตัวแปร เป็นความคิดที่ดี ดูตัวอย่างต่อไปนี้:<br>
-                    <br>int qty; /* quantity of an item */<br>
-                    <br>float value = 12.10; /* purchase value of an item */<br>
-                    <br>int marks; /* marks of a subject */<br>
-                </div>
-            </div>
-    </div>
+            <iframe src="https://drive.google.com/file/d/1tG7e3C89tXe8gXNjtqrHUi2t_M_Q-MJg/preview" width="100%" height="820" allow="autoplay" ></iframe>
+            <h1>เรียน C Programming ฉบับคนไม่เคยเขียนโปรแกรม EP.2 วิธีเขียน Algorithms และ Flowcharts 🔥</h1>
+            <iframe width="100%" height="600" src="https://www.youtube.com/embed/k4hsKlzFzCU?si=AMlcW1qaKBdpjvJC" title="YouTube video player" style="justify-content: center;" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            
         
         <button onclick="window.location.href='/course-Introduction-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" ><h2><u>แบบทดสอบย่อย</h2></u></button>
         
@@ -196,8 +63,8 @@
         
 
         <br></div>
-        </div>
     </div>
+
 
 
     <!-- END Of MIDDLE  -->
