--- a/views/student/layouts/course-middle.ejs
+++ b/views/student/layouts/course-middle.ejs
@@ -17,20 +17,15 @@
                         <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0">
                             <div lang="ja">
                                 <p class="wrapbox auto">
-                                    <b>1. Introduction </b>
-                                    <br><a href="/course-Introduction#Token" style="color:black">Token in C</a>
-                                    <br><a href="/course-Introduction#Semicolons" style="color:black">Semicolons</a>
-                                    <br><a href="/course-Introduction#Comments" style="color:black">Comments</a>
-                                    <br><a href="/course-Introduction#Identifier" style="color:black">Identifier</a>
-                                    <br><a href="/course-Introduction#Escape​" style="color:black">Escape​ ​sequences​ ​in​ ​C</a>
-                                    <br><a href="/course-Introduction#Variable" style="color:black">Variable</a>
+                                    <b>1. Algorithms and Flowcharts </b>
+                                    <br><a href="/course-Introduction#Token" style="color:black">เนื้อหาบทเรียน</a>
                                     <br><a href="/course-Introduction-pretest" style="color:black">แบบทดสอบก่อนเรียน</a>
                                     <br><a href="/course-Introduction-quiz" style="color:black">แบบทดสอบท้ายบท</a>
                                 </p>
                                 <p class="wrapbox auto">
                                     <b>2. String </b>
                                     
-                                    <br><a href="/course-String" style="color:black">String </a>
+                                    <br><a href="/course-String" oneclick="return goToPage('/course-String')" style="color:black">String </a>
                                     <br><a href="/course-String-quiz" style="color:black">แบบทดสอบท้ายบท</a>
                                     <br><br>
                             
