--- a/views/student/quiz/1_Algorithms_and_Flowcharts-quiz.ejs
+++ b/views/student/quiz/1_Algorithms_and_Flowcharts-quiz.ejs
@@ -42,7 +42,7 @@
     <link rel='stylesheet' href='stylesheets/Drag_Drop.css' />
     <link rel="stylesheet" href="stylesheets/quiz.css">
     
-    <title>Introduction - QUIZ</title>
+    <title>Introduction - PostTest</title>
 </head>
 
 <body>
@@ -63,7 +63,7 @@
         <div class="accordion" id="accordionParentSyntax">
             <!--   Introduce -->
             <div id="collapseIntroduce" class="accordion-collapse collapse show" data-bs-parent="#accordionParentSyntax">
-                <h1>Algorithms and Flowcharts</h1>
+                <h1>Algorithms and Flowcharts (Post-test)</h1>
                 
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><i href="/home" class="fa fa-home" style="font-size:16px"></i></li>
