Datatype_and_Variable

--- a/views/student/course/2_Datatype_and_Variable-course.ejs
+++ b/views/student/course/2_Datatype_and_Variable-course.ejs
@@ -68,7 +68,7 @@
                 <iframe width="100%" height="600" src="https://www.youtube.com/embed/ddbidsl_9Fc?si=ISnWVOhHQEgCnN9A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 
 
-        <button onclick="window.location.href='/course-String-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" ><h2><u>แบบทดสอบย่อย</h2></u></button>
+        <button onclick="window.location.href='/course-Datatype_and_Variable-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" ><h2><u>แบบทดสอบย่อย</h2></u></button>
         
 
         
