--- a/views/student/layouts/course-middle.ejs
+++ b/views/student/layouts/course-middle.ejs
@@ -25,8 +25,8 @@
                                 <p class="wrapbox auto">
                                     <b>2. String </b>
                                     
-                                    <br><a href="/course-String" oneclick="return goToPage('/course-String')" style="color:black">String </a>
-                                    <br><a href="/course-String-quiz" style="color:black">แบบทดสอบท้ายบท</a>
+                                    <br><a href="/course-Datatype_and_Variable" style="color:black">String </a>
+                                    <br><a href="/course-Datatype_and_Variable-quiz" style="color:black">แบบทดสอบท้ายบท</a>
                                     <br><br>
                             
                                     <b>3. Datatype</b>
