--- a/views/student/quiz/3_Datatype-quiz.ejs
+++ b/views/student/quiz/3_Datatype-quiz.ejs
@@ -59,7 +59,7 @@
         <div class="accordion" id="accordionParentSyntax">
             <!--   Introduce -->
             <div id="collapseIntroduce" class="accordion-collapse collapse show" data-bs-parent="#accordionParentSyntax">
-                <h1>Datatype - QUIZ</h1>
+                <h1>Input Output - QUIZ</h1>
                 
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><i href="/home" class="fa fa-home" style="font-size:16px"></i></li>
