--- a/views/student/quiz/1_Algorithms_and_Flowcharts-quiz.ejs
+++ b/views/student/quiz/1_Algorithms_and_Flowcharts-quiz.ejs
@@ -42,16 +42,13 @@
     <link rel='stylesheet' href='stylesheets/Drag_Drop.css' />
     <link rel="stylesheet" href="stylesheets/quiz.css">
     
-    <title>Introduction - PostTest</title>
+    <title>Algorithms and Flowcharts - QUIZ</title>
 </head>
 
 <body>
     <!-- Narbar-->
     <%- include('../layouts/navbar') %>
     <!-- end of Narbar-->
-<!-- LEFT -->
-
-<!-- END OF LEFT-->
     
     
  
@@ -63,7 +60,7 @@
         <div class="accordion" id="accordionParentSyntax">
             <!--   Introduce -->
             <div id="collapseIntroduce" class="accordion-collapse collapse show" data-bs-parent="#accordionParentSyntax">
-                <h1>Algorithms and Flowcharts (Post-test)</h1>
+                <h1>Algorithms and Flowcharts (Quiz)</h1>
                 
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><i href="/home" class="fa fa-home" style="font-size:16px"></i></li>
@@ -78,7 +75,7 @@
     <h1 id="choice3"></h1>
    %>
 
-    <%# LV1 %> 
+    <%# LV1 %> <br>
                 <h3>ข้อที่ 1 - 5: วัดความสามารถด้านความรู้ (Knowledge)</h3>
                 <!-- ข้อ 1 -->
                 <div class="list-group">
