--- a/views/teacher/check.ejs
+++ b/views/teacher/check.ejs
@@ -131,7 +131,7 @@
                                 <textarea style="height: 400px; background-color: #cacdcf;" class="form-control" id="lineCounter" readonly rows="10"> </textarea>
                                 <textarea style="height: 400px;" class="form-control" id="code" name="code" rows="10" ><%= student[0].code %></textarea>
                                 <br>
-                                <input class="iscore" type="number" name="studentScore" id="studentScore4" value="" min="0" max="3">
+                                <input class="iscore" type="number" name="studentScore" id="studentScore4" value="" min="0" max="3" step="0.5">
                                 <label class="iscore" for="studentScore4" title="ถูกต้องครบทุกอย่าง">คะแนน</label>
                             </div>
                             </div>
