--- a/public/stylesheets/home1.css
+++ b/public/stylesheets/home1.css
@@ -95,3 +95,11 @@ iframe {
     border: solid 3px rgba(54, 162, 235, 1);
     background: white;
   }
+
+  .container1 {
+    padding: 10px;
+    position: fixed;
+    width: 300px;
+    background-color: aquamarine;
+    border-radius: 5px;
+}
