--- a/views/teacher/check.ejs
+++ b/views/teacher/check.ejs
@@ -25,6 +25,7 @@
     </style>
 
     <link rel='stylesheet' href='stylesheets/home.css' />
+    <link rel='stylesheet' href='stylesheets/home1.css' />
     <link rel='stylesheet' href='stylesheets/compiler_line.css' />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
     <title>Home</title>
@@ -49,14 +50,7 @@
                 </h1>
                 
             </div>
-            <div class="col-2"></div>
-            <div class="col-1">
-                <h1>
-                    <button type="submit"  class="btn btn-outline-success " >
-                        ส่งคะแนน
-                    </button>
-                </h1>
-            </div>
+            
         </div>
         <%# START %> 
         <div class="card bg-light  shadow">
@@ -84,42 +78,30 @@
                                     <span class="input-group-text"><b>ครั้งที่ทำ</b></span>
                                     <span class="input-group-text text-uppercase"><%= student[0].timetodo %></span>
                                 </div>
-                                <!--
-                                    <div class="input-group mb-3">
-                                        <div class="container ">
-                                            <div class="row input-group-text ">
-                                                <div class="col d-flex ">
-                                                    <p><b>คะแนน</b></p>
-                                                </div>
-                                                <div class="w-100"></div>
-                                                <div class="col d-flex">
-
-                                                    <div class="col d-flex">
-                                                        <input class="form-check-input" type="radio" name="studentScore" id="studentScore1" value=1 required>
-                                                        <label class="form-check-label " for="studentScore1" title="เงื่อนไข ครบเล็กน้อย">1 คะแนน</label>
-                                                    </div>
-                                                    <div class="col d-flex">
-                                                        <input class="form-check-input" type="radio" name="studentScore" id="studentScore2" value=2>
-                                                        <label class="form-check-label" for="studentScore2" title="เงื่อนไข ครบถ้วน">2 คะแนน</label>
-                                                    </div>
-                                                    <div class="col ">
-                                                        <input class="form-check-input" type="radio" name="studentScore" id="studentScore3" value=3 >
-                                                        <label class="form-check-label" for="studentScore3" title="โปรแกรมสามารถทำงานได้">3 คะแนน</label>
-                                                    </div>
-                                                    <div class="col">
-                                                        <input class="form-check-input" type="radio" name="studentScore" id="studentScore4" value=4 >
-                                                        <label class="form-check-label" for="studentScore4" title="ถูกต้องครบทุกอย่าง">4 คะแนน</label>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>-->
                             </div>
+                            <div class="col"></div>
+                            <div class="col">
+                             <div class="container1" >
+                                <div>
+                                    <div class="col d-flex " >
+                                        <p><b>คะแนน</b></p>
+                                    </div>
+                                    <div class="col1">
+                                        <input class="form-check-input" style="width: 100px; height: 50px;" type="number" min="0" max="25" step="0.5" name="studentScore" id="studentScore1" value="">
+                                        <label class="form-check-label " for="studentScore1" title="เงื่อนไข ครบเล็กน้อย">1 คะแนน</label>
+                                    </div>
+                                    <div class="">
+                                        <h1><button type="submit"  class="btn btn-outline-success " >ส่งคะแนน</button></h1>
+                                    </div>
+                                </div>
+                            </div>
+                            </div>
+
         
                             <!--ข้อที่ 16-->
                             <div class="input-group mb-3">
                                 <span class="input-group-text"><b>โจทย์ 16</b></span>
-                                <iframe src=" <%= student[0].ADRI  %> " width="100%" height="480" allow="autoplay"></iframe>
+                                <iframe src=" <%= student[0].ADRI  %> " width="50%" height="480" allow="autoplay"></iframe>
                             </div>
                             
                         </div>
@@ -131,8 +113,6 @@
                                 <textarea style="height: 400px; background-color: #cacdcf;" class="form-control" id="lineCounter" readonly rows="10"> </textarea>
                                 <textarea style="height: 400px;" class="form-control" id="code" name="code" rows="10" ><%= student[0].code %></textarea>
                                 <br>
-                                <input class="iscore" type="number" name="studentScore" id="studentScore4" value="" min="0" max="3" step="0.5">
-                                <label class="iscore" for="studentScore4" title="ถูกต้องครบทุกอย่าง">คะแนน</label>
                             </div>
                             </div>
                             
@@ -150,8 +130,6 @@
                                     <span ><b>ข้อ 16.2</b></span>
                                     <textarea style="height: 100%" class="form-control" id="code" name="code" rows="10" ><%= student[0].expResult16%></textarea>
                                     <br>
-                                    <input class="iscore" type="number" name="studentScore" id="studentScore4" value="" min="0" max="1">
-                                    <label class="iscore" for="studentScore4" title="ถูกต้องครบทุกอย่าง">คะแนน</label>
                                 </div>
                             </div>
                            <!-- <div class="col-sm"> 
@@ -166,8 +144,6 @@
                                 <span ><b>ข้อ 16.3</b></span>
                                 <textarea style="height: 100%" class="form-control" id="code" name="code" rows="10" ><%= student[0].sendLink16%></textarea>
                                 <br>
-                                <input class="iscore" type="number" name="studentScore" id="studentScore4" value="" min="0" max="1">
-                                <label class="iscore" for="studentScore4" title="ถูกต้องครบทุกอย่าง">คะแนน</label>
                             </div>
                             </div>
                         </div>
@@ -177,7 +153,7 @@
                         <!--ข้อที่ 17-->
                         <div class="input-group mb-3">
                             <span class="input-group-text"><b>โจทย์ 17</b></span>
-                            <iframe src=" <%= student[0].ADRI  %> " width="100%" height="480" allow="autoplay"></iframe>
+                            <iframe src=" <%= student[0].ADRI  %> " width="50%" height="480" allow="autoplay"></iframe>
                         </div>
                         
                     </div>
@@ -190,8 +166,6 @@
                                 <span ><b>ข้อ 17.1</b></span>
                                 <textarea style="height: 100%" class="form-control" id="code" name="code" rows="10" ><%= student[0].sendLink171%></textarea>
                                 <br>
-                                <input class="iscore" type="number" name="studentScore" id="studentScore4" value="" min="0" max="3">
-                                <label class="iscore" for="studentScore4" title="ถูกต้องครบทุกอย่าง">คะแนน</label>
                             </div>
                         </div>
                         <div class="col-sm"> 
@@ -199,8 +173,6 @@
                                 <span ><b>ข้อ 17.2</b></span>
                                 <textarea style="height: 100%" class="form-control" id="code" name="code" rows="10" ><%= student[0].expResult17%></textarea>
                                 <br>
-                                <input class="iscore" type="number" name="studentScore" id="studentScore4" value="" min="0" max="1">
-                                <label class="iscore" for="studentScore4" title="ถูกต้องครบทุกอย่าง">คะแนน</label>
                             </div>
                         </div>
                         <div class="col-sm">
@@ -208,8 +180,6 @@
                             <span ><b>ข้อ 17.3</b></span>
                             <textarea style="height: 100%" class="form-control" id="code" name="code" rows="10" ><%= student[0].sendLink172%></textarea>
                             <br>
-                                <input class="iscore" type="number" name="studentScore" id="studentScore4" value="" min="0" max="1">
-                                <label class="iscore" for="studentScore4" title="ถูกต้องครบทุกอย่าง">คะแนน</label>
                         </div>
                         </div>
                     </div>
@@ -219,7 +189,7 @@
                     <!--ข้อที่ 18-->
                     <div class="input-group mb-3">
                         <span class="input-group-text"><b>โจทย์ 18</b></span>
-                        <iframe src=" <%= student[0].ADRI  %> " width="100%" height="480" allow="autoplay"></iframe>
+                        <iframe src=" <%= student[0].ADRI  %> " width="50%" height="480" allow="autoplay"></iframe>
                     </div>
                     
                 </div>
@@ -232,8 +202,6 @@
                             <span ><b>ข้อ 18.1</b></span>
                             <textarea style="height: 100%" class="form-control" id="code" name="code" rows="10" ><%= student[0].sendLink181%></textarea>
                             <br>
-                                <input class="iscore" type="number" name="studentScore" id="studentScore4" value="" min="0" max="3">
-                                <label class="iscore" for="studentScore4" title="ถูกต้องครบทุกอย่าง">คะแนน</label>
                         </div>
                     </div>
                     <div class="col-sm"> 
@@ -241,8 +209,6 @@
                             <span ><b>ข้อ 18.2</b></span>
                             <textarea style="height: 100%" class="form-control" id="code" name="code" rows="10" ><%= student[0].expResult18%></textarea>
                             <br>
-                                <input class="iscore" type="number" name="studentScore" id="studentScore4" value="" min="0" max="1">
-                                <label class="iscore" for="studentScore4" title="ถูกต้องครบทุกอย่าง">คะแนน</label>
                         </div>
                     </div>
                     <div class="col-sm">
@@ -250,8 +216,6 @@
                         <span ><b>ข้อ 18.3</b></span>
                         <textarea style="height: 100%" class="form-control" id="code" name="code" rows="10" ><%= student[0].sendLink182%></textarea>
                         <br>
-                                <input class="iscore" type="number" name="studentScore" id="studentScore4" value="" min="0" max="1">
-                                <label class="iscore" for="studentScore4" title="ถูกต้องครบทุกอย่าง">คะแนน</label>
                     </div>
                     </div>
                 </div>
@@ -261,7 +225,7 @@
                 <!--ข้อที่ 19-->
                 <div class="input-group mb-3">
                     <span class="input-group-text"><b>โจทย์ 19</b></span>
-                    <iframe src=" <%= student[0].ADRI  %> " width="100%" height="480" allow="autoplay"></iframe>
+                    <iframe src=" <%= student[0].ADRI  %> " width="50%" height="480" allow="autoplay"></iframe>
                 </div>
                 
             </div>
@@ -274,8 +238,6 @@
                         <span ><b>ข้อ 19.1</b></span>
                         <textarea style="height: 100%" class="form-control" id="code" name="code" rows="10" ><%= student[0].sendLink191%></textarea>
                         <br>
-                        <input class="iscore" type="number" name="studentScore" id="studentScore4" value="" min="0" max="3">
-                        <label class="iscore" for="studentScore4" title="ถูกต้องครบทุกอย่าง">คะแนน</label>
                     </div>
                 </div>
                 <div class="col-sm"> 
@@ -283,8 +245,6 @@
                         <span ><b>ข้อ 19.2</b></span>
                         <textarea style="height: 100%" class="form-control" id="code" name="code" rows="10" ><%= student[0].expResult19%></textarea>
                         <br>
-                        <input class="iscore" type="number" name="studentScore" id="studentScore4" value="" min="0" max="1">
-                        <label class="iscore" for="studentScore4" title="ถูกต้องครบทุกอย่าง">คะแนน</label>
                     </div>
                 </div>
                 <div class="col-sm">
@@ -292,8 +252,6 @@
                     <span ><b>ข้อ 19.3</b></span>
                     <textarea style="height: 100%" class="form-control" id="code" name="code" rows="10" ><%= student[0].sendLink192%></textarea>
                     <br>
-                    <input class="iscore" type="number" name="studentScore" id="studentScore4" value="" min="0" max="1">
-                    <label class="iscore" for="studentScore4" title="ถูกต้องครบทุกอย่าง">คะแนน</label>
                 </div>
                 </div>
             </div>
@@ -302,7 +260,7 @@
             <!--ข้อที่ 20-->
             <div class="input-group mb-3">
                 <span class="input-group-text"><b>โจทย์ 20</b></span>
-                <iframe src=" <%= student[0].ADRI  %> " width="100%" height="480" allow="autoplay"></iframe>
+                <iframe src=" <%= student[0].ADRI  %> " width="50%" height="480" allow="autoplay"></iframe>
             </div>
             
         </div>
@@ -315,8 +273,6 @@
                     <span ><b>ข้อ 20.1</b></span>
                     <textarea style="height: 100%" class="form-control" id="code" name="code" rows="10" ><%= student[0].sendLink201%></textarea>
                     <br>
-                    <input class="iscore" type="number" name="studentScore" id="studentScore4" value="" min="0" max="3">
-                    <label class="iscore" for="studentScore4" title="ถูกต้องครบทุกอย่าง">คะแนน</label>
                 </div>
             </div>
             <div class="col-sm"> 
@@ -324,8 +280,6 @@
                     <span ><b>ข้อ 20.2</b></span>
                     <textarea style="height: 100%" class="form-control" id="code" name="code" rows="10" ><%= student[0].expResult20%></textarea>
                     <br>
-                    <input class="iscore" type="number" name="studentScore" id="studentScore4" value="" min="0" max="1">
-                    <label class="iscore" for="studentScore4" title="ถูกต้องครบทุกอย่าง">คะแนน</label>
                 </div>
                 </div>
             </div>
@@ -334,8 +288,6 @@
                 <span ><b>ข้อ 20.3</b></span>
                 <textarea style="height: 100%" class="form-control" id="code" name="code" rows="10" ><%= student[0].sendLink202%></textarea>
                 <br>
-                    <input class="iscore" type="number" name="studentScore" id="studentScore4" value="" min="0" max="1">
-                    <label class="iscore" for="studentScore4" title="ถูกต้องครบทุกอย่าง">คะแนน</label>
                 </div>
             </div>
             </div>
