--- a/views/student/layouts/course-middle.ejs
+++ b/views/student/layouts/course-middle.ejs
@@ -18,46 +18,76 @@
                             <div lang="ja">
                                 <p class="wrapbox auto">
                                     <b>1. Algorithms and Flowcharts </b>
-                                    <br><a href="/course-Algorithms_and_Flowcharts-pretest" style="color:black">แบบทดสอบก่อนเรียน</a>
                                     <br><a href="/course-Algorithms_and_Flowcharts" style="color:black">เนื้อหาบทเรียน</a>
-                                    <br><a href="/course-Algorithms_and_Flowcharts-quiz" style="color:black">แบบทดสอบหลังเรียน</a>
+                                    <br><a href="/course-Algorithms_and_Flowcharts-pretest" style="color:black">แบบทดสอบก่อนเรียน</a>
+                                    <br><a href="/course-Algorithms_and_Flowcharts-quiz" style="color:black">แบบทดสอบท้ายบท</a>
                                 </p>
                                 <p class="wrapbox auto">
-                                    <b>2. Datatype and Variable </b>
+                                    <b>2. String </b>
                                     
-                                    <br><a href="/course-Datatype_and_Variable" style="color:black">Datatype and Variable </a>
-                                    <br><a href="/course-Datatype_and_Variable-quiz" style="color:black">แบบทดสอบหลังเรียน</a>
+                                    <br><a href="/course-Datatype_and_Variable" style="color:black">String </a>
+                                    <br><a href="/course-Datatype_and_Variable-quiz" style="color:black">แบบทดสอบท้ายบท</a>
                                     <br><br>
-                                 </p>   
-                                    <p class="wrapbox auto">
-                                    <b>3. Input and Output</b>
-                                    <br><a href="/course-Datatype" style="color:black">Input and Output</a>
-                                    <br><a href="/course-Datatype-quiz" style="color:black">แบบทดสอบหลังเรียน</a>
+                            
+                                    <b>3. Datatype</b>
+                                    <br><a href="/course-Datatype" style="color:black">Datatype</a>
+                                    <br><a href="/course-Datatype-quiz" style="color:black">แบบทดสอบท้ายบท</a>
+                                    
                                 </p>
                                 <p class="wrapbox auto">
-                                    <b>4. Operators and Expressions</b>
-                                    <br><a href="/course-Operators#Operators" style="color:black">Operators and Expressions</a>
-                                    <br><a href="/course-Operators-quiz" style="color:black">แบบทดสอบหลังเรียน</a>
+                                    <b>4. Operators</b>
+                                    <br><a href="/course-Operators#Operators" style="color:black">Operators</a>
+                                    <br><a href="/course-Operators#Arithmetic" style="color:black">Arithmetic</a>
+                                    <br><a href="/course-Operators#Relational" style="color:black">Relational</a>
+                                    <br><a href="/course-Operators#Logical" style="color:black">Logical</a>
+                                    <br><a href="/course-Operators#Bitwise" style="color:black">Bitwise</a>
+                                    <br><a href="/course-Operators#Assignment" style="color:black">Assignment</a>
+                                    <br><a href="/course-Operators#Misc" style="color:black">Misc</a>
+                                    <br><a href="/course-Operators-quiz" style="color:black">แบบทดสอบท้ายบท</a>
                                 </p>
                                 <p class="wrapbox auto">
-                                    <b>5. Selection Statement&Output </b>
-                                    <br><a href="/course-InputOutput#IO" style="color:black">Input&Selection Statement</a>
-                                    <br><a href="/course-InputOutput-quiz" style="color:black">แบบทดสอบหลังเรียน</a>
+                                    <b>5. Input&Output </b>
+                                    <br><a href="/course-InputOutput#IO" style="color:black">Input&Output</a>
+                                    <br><a href="/course-InputOutput#Output" style="color:black">Output</a>
+                                    <br><a href="/course-InputOutput#Input" style="color:black">Input</a>
+                                    <br><a href="/course-InputOutput-quiz" style="color:black">แบบทดสอบท้ายบท</a>
                                 </p>
                                 <p class="wrapbox auto">
-                                    <b>6. Loop Statement </b>
-                                    <br><a href="/course-Selection_Statement#if_else" style="color:black"> Loop Statement</a>
-                                    <br><a href="/course-Selection_Statement-quiz" style="color:black">แบบทดสอบหลังเรียน</a>
+                                    <b>6. Select Statement </b>
+                                    <br><a href="/course-Selection_Statement#if_else" style="color:black"> if - else</a>
+                                    <br><a href="/course-Selection_Statement#break_and_continue" style="color:black">break and continue</a>
+                                    <br><a href="/course-Selection_Statement#switch_case" style="color:black">switch - case</a>
+                                    <br><a href="/course-Selection_Statement#goto_statement" style="color:black">goto statement</a>
+                                    <br><a href="/course-Selection_Statement-quiz" style="color:black">แบบทดสอบท้ายบท</a>
                                 </p>
                                 <p class="wrapbox auto">
-                                    <b>7. Array and String </b>
-                                    <br><a href="/course-Loop_Statement#for_Loop" style="color:black">Array and String</a>
-                                    <br><a href="/course-Loop_Statement-quiz" style="color:black">แบบทดสอบหลังเรียน</a>
+                                    <b>7. Loop Statement </b>
+                                    <br><a href="/course-Loop_Statement#for_Loop" style="color:black">for Loop</a>
+                                    <br><a href="/course-Loop_Statement#while_Loop" style="color:black">while Loop</a>
+                                    <br><a href="/course-Loop_Statement#do_while_Loop" style="color:black">do while Loop</a>
+                                    <br><a href="/course-Loop_Statement-quiz" style="color:black">แบบทดสอบท้ายบท</a>
                                 </p>
                                 <p class="wrapbox auto">
-                                    <b>8. Functions </b>
-                                    <br><a href="/course-Pointers" style="color:black">Functions</a>
-                                    <br><a href="/course-Pointers-quiz" style="color:black">แบบทดสอบหลังเรียน</a>
+                                    <b>8. Pointers</b>
+                                    <br><a href="/course-Pointers" style="color:black">Pointers</a>
+                                    <br><a href="/course-Pointers-quiz" style="color:black">แบบทดสอบท้ายบท</a>
+                                </p>
+                                <p class="wrapbox auto">
+                                    <b>9. Function</b>
+                                    <br><a href="/course-Function" style="color:black">Function</a>
+                                    <br><a href="/course-Function-quiz" style="color:black">แบบทดสอบท้ายบท</a>
+                                </p>
+                                <p class="wrapbox auto">
+                                    <b>10. Structure </b>
+                                    <br><a href="/course-Structure" style="color:black">Token</a>
+                                    <br><a href="/course-Structure-quiz" style="color:black">แบบทดสอบท้ายบท</a>
+                                </p>
+                                <p class="wrapbox auto">
+                                    <b>11. Array </b>
+                                    <br><a href="/course-Array#Declaring" style="color:black">Declaring</a>
+                                    <br><a href="/course-Array#Two_Dimensional" style="color:black">Two-Dimensional</a>
+                                    <br><a href="/course-Array#Three_Dimensional​" style="color:black">Three-Dimensional​</a>
+                                    <br><a href="/course-Array-quiz" style="color:black">แบบทดสอบท้ายบท</a>
                                 </p>
                                 
                               </div>
