--- a/views/student/quiz/2_Datatype_and_Variable-quiz.ejs
+++ b/views/student/quiz/2_Datatype_and_Variable-quiz.ejs
@@ -85,7 +85,7 @@
                     </label>
                     <input type="radio" class="btn-check" name="choice1" id="option1-3" autocomplete="off" value="C">
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="option1-3">
-                        42 
+                        42 *
                     </label>
                     <input type="radio" class="btn-check" name="choice1" id="option1-4" autocomplete="off" value="D">
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="option1-4">
@@ -108,7 +108,7 @@
                     </label>
                     <input type="radio" class="btn-check" name="choice2" id="option2-3" autocomplete="off" value="C">
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="option2-3">
-                        ตัวเลขทศนิยม 
+                        ตัวเลขทศนิยม *
                     </label>
                     <input type="radio" class="btn-check" name="choice2" id="option2-4" autocomplete="off" value="D">
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="option2-4">
@@ -124,7 +124,7 @@
                     
                     <input type="radio" class="btn-check" name="choice3" id="option3-1" autocomplete="off" value="A" required>
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="option3-1">
-                        ตัวแปร x เป็นชนิดข้อมูล int
+                        ตัวแปร x เป็นชนิดข้อมูล int *
                     </label>
                     <input type="radio" class="btn-check" name="choice3" id="option3-2" autocomplete="off" value="B">
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="option3-2">
@@ -157,7 +157,7 @@
                     </label>
                     <input type="radio" class="btn-check" name="choice4" id="option4-3" autocomplete="off" value="C">
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="option4-3">
-                        #define MAX_VALUE 100 หรือ const int max_value = 100;
+                        #define MAX_VALUE 100 หรือ const int max_value = 100; *
                     </label>
                     <input type="radio" class="btn-check" name="choice4" id="option4-4" autocomplete="off" value="D">
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="option4-4">
@@ -216,7 +216,7 @@
                     </label>
                     <input type="radio" class="btn-check" name="choice6" id="option6-2" autocomplete="off" value="B">
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="option6-2">
-                        10
+                        10 *
 
                     </label>
                     <input type="radio" class="btn-check" name="choice6" id="option6-3" autocomplete="off" value="C">
@@ -253,7 +253,7 @@
                     </label>
                     <input type="radio" class="btn-check" name="choice7" id="option7-2" autocomplete="off" value="B">
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="option7-2">
-                        x = 10, y = 10
+                        x = 10, y = 10 *
                     </label>
                     <input type="radio" class="btn-check" name="choice7" id="option7-3" autocomplete="off" value="C">
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="option7-3">
@@ -286,7 +286,7 @@
                     
                     <input type="radio" class="btn-check" name="choice8" id="option8-1" autocomplete="off" value="A" required>
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="option8-1">
-                        100, 10, 3.14, A
+                        100, 10, 3.14, A * 
                     </label>
                     <input type="radio" class="btn-check" name="choice8" id="option8-2" autocomplete="off" value="B">
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="option8-2">
@@ -375,7 +375,7 @@
                     </label>
                     <input type="radio" class="btn-check" name="choice10" id="option10-3" autocomplete="off" value="C">
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="option10-3">
-                        Local Variable: 70, Global Variable: 30
+                        Local Variable: 70, Global Variable: 30 *
 
                     </label>
                     <input type="radio" class="btn-check" name="choice10" id="option10-4" autocomplete="off" value="D">
@@ -420,7 +420,7 @@
                         </label>
                         <input type="radio" class="btn-check" name="choice12" id="option12-2" autocomplete="off" value="B">
                         <label class="list-group-item btn-outline-dark list-group-item-action" for="option12-2">
-                            No 
+                            No *
                         </label>
                     </div><br>   
                 <!-- ข้อ 13 ** -->
@@ -442,7 +442,7 @@
                             <div class="group2">
                                 <input type="radio" class="btn-check" name="choice13" id="option13-1" autocomplete="off" value="A">
                                 <label class="list-group-item btn-outline-dark list-group-item-action" for="option13-1">
-                                    Yes
+                                    Yes *
                                 </label>
                                 <input type="radio" class="btn-check" name="choice13" id="option13-2" autocomplete="off" value="B">
                                 <label class="list-group-item btn-outline-dark list-group-item-action" for="option13-2">
