--- a/views/index/index_viewer.ejs
+++ b/views/index/index_viewer.ejs
@@ -95,9 +95,9 @@
     <img class="img" src="https://images.pexels.com/photos/1181298/pexels-photo-1181298.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
     <div class="container">
       <div class="carousel-caption text-start">
-        <h1>Example headline.</h1>
-        <p class="opacity-75">Some representative placeholder content for the first slide of the carousel.</p>
-        <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+        <h1>GeekcodeCarft</h1>
+        <p class="opacity-75">เป็นเว็บไซต์ช่วยพัฒนาทักษะที่จำเป็นต่อการเขียนโปรแกรม</p>
+        <!-- <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p> -->
       </div>
     </div>
   </div>
@@ -107,7 +107,7 @@
       <div class="carousel-caption">
         <h1>Another example headline.</h1>
         <p>Some representative placeholder content for the second slide of the carousel.</p>
-        <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+        <!-- <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p> -->
       </div>
     </div>
   </div>
@@ -117,7 +117,7 @@
       <div class="carousel-caption text-end">
         <h1>One more for good measure.</h1>
         <p>Some representative placeholder content for the third slide of this carousel.</p>
-        <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
+        <!-- <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p> -->
       </div>
     </div>
   </div>
@@ -175,6 +175,18 @@
   </div>
   <div class="col-md-5">
     <img class="img2" src="https://images.unsplash.com/photo-1516321318423-f06f85e504b3?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">    
+  </div>
+</div>
+
+<hr class="featurette-divider">
+
+<div class="row featurette">
+  <div class="col-md-7 order-md-2">
+    <h2 class="featurette-heading fw-normal lh-1">Oh yeah, it’s that good. <span class="text-body-secondary">See for yourself.</span></h2>
+    <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
+  </div>
+  <div class="col-md-5 order-md-1">
+    <img class="img2" src="https://images.pexels.com/photos/459653/pexels-photo-459653.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
   </div>
 </div>
 
