--- a/views/student/layouts/course-middle.ejs
+++ b/views/student/layouts/course-middle.ejs
@@ -20,44 +20,44 @@
                                     <b>1. Algorithms and Flowcharts </b>
                                     <br><a href="/course-Algorithms_and_Flowcharts-pretest" style="color:black">แบบทดสอบก่อนเรียน</a>
                                     <br><a href="/course-Algorithms_and_Flowcharts" style="color:black">เนื้อหาบทเรียน</a>
-                                    <br><a href="/course-Algorithms_and_Flowcharts-quiz" style="color:black">แบบทดสอบหลังเรียน</a>
+                                    <br><a href="/course-Algorithms_and_Flowcharts-quiz" style="color:black">แบบทดสอบหลังเรียน</a><!-- -->
                                 </p>
                                 <p class="wrapbox auto">
                                     <b>2. Datatype and Variable </b>
                                     
-                                    <br><a href="/course-Datatype_and_Variable" style="color:black">Datatype and Variable </a>
-                                    <br><a href="/course-Datatype_and_Variable-quiz" style="color:black">แบบทดสอบหลังเรียน</a>
+                                    <br><a href="/course-Datatype_and_Variable" style="color:black">เนื้อหาบทเรียน </a>
+                                    <!--<br><a href="/course-Datatype_and_Variable-quiz" style="color:black">แบบทดสอบหลังเรียน</a>-->
                                     <br><br>
                                  </p>   
                                     <p class="wrapbox auto">
                                     <b>3. Input and Output</b>
-                                    <br><a href="/course-Datatype" style="color:black">Input and Output</a>
-                                    <br><a href="/course-Datatype-quiz" style="color:black">แบบทดสอบหลังเรียน</a>
+                                    <br><a href="/course-Datatype" style="color:black">เนื้อหาบทเรียน</a>
+                                    <!--<br><a href="/course-Datatype-quiz" style="color:black">แบบทดสอบหลังเรียน</a>-->
                                 </p>
                                 <p class="wrapbox auto">
                                     <b>4. Operators and Expressions</b>
-                                    <br><a href="/course-Operators#Operators" style="color:black">Operators and Expressions</a>
-                                    <br><a href="/course-Operators-quiz" style="color:black">แบบทดสอบหลังเรียน</a>
+                                    <br><a href="/course-Operators#Operators" style="color:black">เนื้อหาบทเรียน</a>
+                                    <!--<br><a href="/course-Operators-quiz" style="color:black">แบบทดสอบหลังเรียน</a>-->
                                 </p>
                                 <p class="wrapbox auto">
                                     <b>5. Selection Statement&Output </b>
-                                    <br><a href="/course-InputOutput#IO" style="color:black">Input&Selection Statement</a>
-                                    <br><a href="/course-InputOutput-quiz" style="color:black">แบบทดสอบหลังเรียน</a>
+                                    <br><a href="/course-InputOutput#IO" style="color:black">เนื้อหาบทเรียน</a>
+                                    <!--<br><a href="/course-InputOutput-quiz" style="color:black">แบบทดสอบหลังเรียน</a>-->
                                 </p>
                                 <p class="wrapbox auto">
                                     <b>6. Loop Statement </b>
-                                    <br><a href="/course-Selection_Statement#if_else" style="color:black"> Loop Statement</a>
-                                    <br><a href="/course-Selection_Statement-quiz" style="color:black">แบบทดสอบหลังเรียน</a>
+                                    <br><a href="/course-Selection_Statement#if_else" style="color:black"> เนื้อหาบทเรียน</a>
+                                    <!--<br><a href="/course-Selection_Statement-quiz" style="color:black">แบบทดสอบหลังเรียน</a>-->
                                 </p>
                                 <p class="wrapbox auto">
                                     <b>7. Array and String </b>
-                                    <br><a href="/course-Loop_Statement#for_Loop" style="color:black">Array and String</a>
-                                    <br><a href="/course-Loop_Statement-quiz" style="color:black">แบบทดสอบหลังเรียน</a>
+                                    <br><a href="/course-Loop_Statement#for_Loop" style="color:black">เนื้อหาบทเรียน</a>
+                                    <!--<br><a href="/course-Loop_Statement-quiz" style="color:black">แบบทดสอบหลังเรียน</a>-->
                                 </p>
                                 <p class="wrapbox auto">
                                     <b>8. Functions </b>
-                                    <br><a href="/course-Pointers" style="color:black">Functions</a>
-                                    <br><a href="/course-Pointers-quiz" style="color:black">แบบทดสอบหลังเรียน</a>
+                                    <br><a href="/course-Pointers" style="color:black">เนื้อหาบทเรียน</a>
+                                    <!--<br><a href="/course-Pointers-quiz" style="color:black">แบบทดสอบหลังเรียน</a>-->
                                 </p>
                                 
                               </div>
