--- a/views/student/course/1_Algorithms_and_Flowcharts-course.ejs
+++ b/views/student/course/1_Algorithms_and_Flowcharts-course.ejs
@@ -26,7 +26,7 @@
     </style>
 
     <link rel='stylesheet' href='stylesheets/home.css' />
-    <title>Introduction</title>
+    <title>Algorithms and Flowcharts</title>
 </head>
 
 <body>
@@ -52,12 +52,15 @@
     <!-- MIDDLE 1 -->
     <div class="content">
         <div id = "content" class="container">
+            <h2>บทที่ 1 Algorithms and Flowcharts</h2>
             <iframe src="https://drive.google.com/file/d/1tG7e3C89tXe8gXNjtqrHUi2t_M_Q-MJg/preview" width="100%" height="820" allow="autoplay" ></iframe>
-            <h1>เรียน C Programming ฉบับคนไม่เคยเขียนโปรแกรม EP.2 วิธีเขียน Algorithms และ Flowcharts 🔥</h1>
+            <br><br><h4>วิธีเขียน Algorithms และ Flowcharts 🔥</h4>
             <iframe width="100%" height="600" src="https://www.youtube.com/embed/k4hsKlzFzCU?si=AMlcW1qaKBdpjvJC" title="YouTube video player" style="justify-content: center;" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             
-        
-        <button onclick="window.location.href='/course-Algorithms_and_Flowcharts-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" ><h2><u>แบบทดสอบย่อย</h2></u></button>
+        <br><br>
+        <!--
+        <button onclick="window.location.href='/course-Algorithms_and_Flowcharts-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
+        <h4>แบบทดสอบหลังเรียน</h4></button>-->
         
 
         
