--- a/views/student/course/2_Datatype_and_Variable-course.ejs
+++ b/views/student/course/2_Datatype_and_Variable-course.ejs
@@ -52,23 +52,25 @@
     <!-- MIDDLE 1 -->
     <div class="content">
         <div id = "content" class="container">
-            <h1>บทที่ 2 Datatype and Variable</h1>
+            <h2>บทที่ 2 Datatype and Variable</h2>
     <!--   C Language -->
             <div class="accordion" id="accordionParentSyntax">
                 <iframe src="https://drive.google.com/file/d/1UAGOdOiR-QB-WsqfnEFl6whrYqXEfbXb/preview" width="100%" height="820" allow="autoplay"></iframe>
-                <h2>เรียน C Programming ฉบับคนไม่เคยเขียนโปรแกรม EP.1 เริ่มต้นใช้งาน Online GDB และ Dev C++ IDE 🔥</h2>
+                <br><br><h4>เริ่มต้นใช้งาน Online GDB และ Dev C++ IDE 🔥</h4>
                 <iframe width="100%" height="600" src="https://www.youtube.com/embed/0fd7xXnW9E8?si=oIPvfKBPw5qTAgHW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <h2>เรียน C Programming ฉบับคนไม่เคยเขียนโปรแกรม EP.3 โครงสร้างการเขียนโปรแกรม C Structures 🔥</h2>
+                <br><br><h4>โครงสร้างการเขียนโปรแกรม C Structures 🔥</h4>
                 <iframe width="100%" height="600" src="https://www.youtube.com/embed/ZLTtjffNfvs?si=_QEnQmawHOR5bS3V" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <h2>เรียน C Programming ฉบับคนไม่เคยเขียนโปรแกรม EP.4 รูปแบบชนิดข้อมูล Data Types Formats 🔥</h2>
+                <br><br><h4>รูปแบบชนิดข้อมูล Data Types Formats 🔥</h4>
                 <iframe width="100%" height="600" src="https://www.youtube.com/embed/g2mP2zgteaI?si=mP-4FPPAHqwmB_ij" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <h2>เรียน C Programming ฉบับคนไม่เคยเขียนโปรแกรม EP.6 กำหนดค่าคงที่ Define Constant 🔥</h2>
+                <br><br><h4>กำหนดค่าคงที่ Define Constant 🔥</h4>
                 <iframe width="100%" height="600" src="https://www.youtube.com/embed/VKXHv_C4C9g?si=s_FD9R_4ul5xCT6v" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <h2>เรียน C Programming ฉบับคนไม่เคยเขียนโปรแกรม EP.14 สัญลักษณ์พิเศษ Formats and Escape Characters 🔥</h2>
+                <br><br><h4>สัญลักษณ์พิเศษ Formats and Escape Characters 🔥</h4>
                 <iframe width="100%" height="600" src="https://www.youtube.com/embed/ddbidsl_9Fc?si=ISnWVOhHQEgCnN9A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 
-
-        <button onclick="window.location.href='/course-Datatype_and_Variable-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" ><h2><u>แบบทดสอบย่อย</h2></u></button>
+        <br><br>
+        <!--
+        <button onclick="window.location.href='/course-Datatype_and_Variable-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
+        <h4><u>แบบทดสอบย่อย</h2></u></button>-->
         
 
         
