--- a/views/student/layouts/course-middle.ejs
+++ b/views/student/layouts/course-middle.ejs
@@ -20,7 +20,7 @@
                                     <b>1. Algorithms and Flowcharts </b>
                                     <br><a href="/course-Algorithms_and_Flowcharts-pretest" style="color:black">แบบทดสอบก่อนเรียน</a>
                                     <br><a href="/course-Algorithms_and_Flowcharts" style="color:black">เนื้อหาบทเรียน</a>
-                                    <br><a href="/course-Algorithms_and_Flowcharts-quiz" style="color:black">แบบทดสอบหลังเรียน</a><!-- -->
+                                    <!--<br><a href="/course-Algorithms_and_Flowcharts-quiz" style="color:black">แบบทดสอบหลังเรียน</a>-->
                                 </p>
                                 <p class="wrapbox auto">
                                     <b>2. Datatype and Variable </b>
