--- a/views/teacher/check.ejs
+++ b/views/teacher/check.ejs
@@ -88,7 +88,7 @@
                                     </div>
                                     <div class="col1">
                                         <input class="form-check-input" style="width: 100px; height: 50px;" type="number" min="0" max="25" step="0.5" name="studentScore" id="studentScore1" value="">
-                                        <label class="form-check-label " for="studentScore1" title="เงื่อนไข ครบเล็กน้อย">1 คะแนน</label>
+                                        <label class="form-check-label " for="studentScore1" title="เงื่อนไข ครบเล็กน้อย"> คะแนน</label>
                                     </div>
                                     
                                 </div>
